--- a/app/src/main/res/drawable/movie_background_gradient.xml
+++ b/app/src/main/res/drawable/movie_background_gradient.xml
@@ -4,5 +4,5 @@
 
     <gradient android:angle="90"
         android:endColor="#00ffffff"
-        android:startColor="#aa000000"
+        android:startColor="#aa000000" />
 </shape>
