--- a/app/src/main/res/layout/upcoming_movies_row.xml
+++ b/app/src/main/res/layout/upcoming_movies_row.xml
@@ -10,6 +10,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/white"
         android:text="@string/upcoming_movies"
         android:textStyle="bold"
         android:textSize="20sp" />
